--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="app/services/authentication.js"></script>
   <script src="app/controllers/controllers.js"></script>
   <script src="app/controllers/registration.js"></script>
+  <script src="app/controllers/status.js"></script>
 
     <script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
